--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ a {
   align-items: flex-end;
   padding: 20px;
   background-color: rgb(24, 101, 218);
+  gap:500px;
 }
 .container4 {
   display: flex;
