--- a/styles.css
+++ b/styles.css
@@ -103,13 +103,18 @@ a {
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
   padding: 20px;
   background-color: rgb(24, 101, 218);
-  gap:500px;
 }
+
+.header > nav{
+  display: flex;
+  align-items: center;
+  gap: 10%;
+  font-size: 20px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .container4 {
   display: flex;
   flex-direction: row;
