--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,13 @@ body {
   
 }
 
+.pagIntegrantes{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .conteiner {
   font-family: 'Roboto Mono', monospace;
   font-optical-sizing: auto;
@@ -118,11 +125,15 @@ a {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
-  margin-right: 50px;
+  justify-content: center;
   align-items: center;
-  padding: 100px;
   gap: 70px;
+}
+
+.retorno{
+  margin-top: 50px;
+  font-size: 30px;
+  
 }
 
 .conteiner4 h1 {
@@ -136,17 +147,21 @@ a {
 .card > img {
   width: 200px;
   height: auto;
-  padding: 20px;
   border: none;
-  border-radius: 20px;
 }
 
 .card {
-  background-color: rgb(14, 124, 128);
-  padding:1rem;
+  background-color:rgb(102, 199, 202);
+  padding:30px;
   margin: 1rem;
   border-radius: 8px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  max-width: 330px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+  min-height: 570px;
 }
 
 /* .card :hover { cursor: pointer;
@@ -165,15 +180,30 @@ a {
   left: 0;
   padding: 10px;
   display: none;
-  
   width: 100%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.info > p{
+  /* min-height: 210px; */
+}
+
 .modal{
-  margin-left: 700px;
   height: 100px;   
-  background-color: rgb(136, 7, 7);
+  background-color: rgb(255, 255, 255);
   border-radius: 8px;
+  transition: 0.5s;
+}
+
+.modal:hover{
+  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
